src/app/globals.css
@import "tailwindcss";

@theme {
    /* สีเหลือง ทอง */
    --color-brand-yellow: #fdbd1a;
    --color-brand-yellow-hover: #eab308;
    --color-brand-yellow-light: #fcd34d;
    --color-brand-yellow-dark: #fbbf24;

    /* สีแดง ส้ม */
    --color-brand-red: #e1242a;
    --color-brand-red-dark: #c82c2c;
    --color-brand-red-light: #ff8a8a;
    --color-brand-orange: #ff7e22;
    --color-brand-orange-avatar: #f98825;

    /* สีอื่น */
    --color-brand-green: #16a34a;
    --color-brand-gray-light: #f5f5f5;
    --color-brand-gray: #a3a3a3;
}

body {
    background-color: #e5e5e5;
}

/* ซ่อน scrollbar */
.no-scrollbar::-webkit-scrollbar {
    display: none;
}
.no-scrollbar {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

